// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mutation snapshot 1`] = `
MutationNode {
  "_": Object {
    "afterware": Array [],
    "middleware": Array [],
    "name": "MutationNode",
    "resolve": [Function],
  },
  "args": Object {
    "input": Object {
      "type": "MutationNodeInput!",
    },
  },
  "resolve": [Function],
  "type": "MutationNodePayload",
}
`;

exports[`Mutation with name 1`] = `
PropertyNode {
  "_": Object {
    "afterware": Array [],
    "middleware": Array [],
    "name": "Node",
    "resolve": [Function],
  },
  "args": Object {
    "input": Object {
      "type": "NodeInput!",
    },
  },
  "resolve": [Function],
  "type": "NodePayload",
}
`;

exports[`Mutation with name 2`] = `
Node {
  "_": Object {
    "afterware": Array [],
    "middleware": Array [],
    "name": "Node",
    "resolve": [Function],
  },
  "args": Object {
    "input": Object {
      "type": "NodeInput!",
    },
  },
  "resolve": [Function],
  "type": "NodePayload",
}
`;
